--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								</ul>
 							</div>
 						</section>
-						<section class="spotlight">
+						<!--.<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Projekt 3 -<br />
 								Nochmal ein Projekt</h2>
@@ -103,7 +103,7 @@
 									</a></li>
 								</ul>
 							</div>
-						</section>
+						</section> -->
 					</section>
 
 				<!-- Three 
