--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Portfolio</title>
@@ -44,10 +39,7 @@
 							<h2>Florian Semen</h2>
 							<p>Ein Überblick<br />
 							über mich<br />
-							und was ich gern mach.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
-							</ul>
+							und was ich gerne mach.</p>
 						</div>
 						<a href="#one" class="more scrolly">Mehr Erfahren</a>
 					</section>
@@ -86,7 +78,8 @@
 							<div class="image"><img src="images/neural.jpg" alt="" /></div><div class="content">
 								<h2>Projekt 2 -<br />
 								Neurale Netzwerke</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>Hierbei handelt es sich um ein Programm, das ein Neuronales Netzwerk trainieren, und
+									anschließen auch anwenden kann.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/96flose/Handwritten-Digits" target="_blank" class="button primary">Ansehen
 									</a></li>
@@ -146,7 +139,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.xing.com/profile/Florian_Semen/cv" class="icon brands fa-xing"><span class="label">Twitter</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Florian Semen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
